feat: modify path and rebuild

--- a/src/index.html
+++ b/src/index.html
@@ -298,10 +298,7 @@ layout: "layouts/base.njk"
 					<div
 						class="upcoming-feat__icon w-12 h-12 rounded-full bg-primary-lighter flex items-center justify-center shrink-0 mr-5"
 					>
-						<img
-							src="{{settings.siteRoot}}/assets/img/{{upcomingFeature.icon}}.svg"
-							alt=""
-						/>
+						<img src="assets/img/{{upcomingFeature.icon}}.svg" alt="" />
 					</div>
 					<div class="upcoming-feat__content">
 						<h3
