--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@ layout: "layouts/base.njk"
 					Sign up now to see why businesses, staff & clients ALL love using
 					KENNEKT.
 				</p>
-				<a href="#" class="block btn btn-dark btn-bigger mb-4 xl:mb-8">
-					Get Started Now - It's Free
-				</a>
+				<!--				<a href="#" class="block btn btn-dark btn-bigger mb-4 xl:mb-8">-->
+				<!--					Get Started Now - It's Free-->
+				<!--				</a>-->
 				<p class="text-grey text-xs xl:text-base">
 					By signing up, you agree to the Terms of Service
 				</p>
@@ -45,32 +45,7 @@ layout: "layouts/base.njk"
 </div>
 <!--    Intro End-->
 <!--    Who are using section Begin-->
-<div class="brands mb-4">
-	<div class="brands__inner xl:max-w-[1100px] mx-auto py-6">
-		<div
-			class="brands__list flex items-center gap-x-16 justify-center py-4 px-4"
-		>
-			<div class="brands__item">
-				<img class="max-w-none" src="assets/img/logo-airbnb.svg" alt="" />
-			</div>
-			<div class="brands__item">
-				<img class="max-w-none" src="assets/img/logo-hubspot.svg" alt="" />
-			</div>
-			<div class="brands__item">
-				<img class="max-w-none" src="assets/img/logo-google.svg" alt="" />
-			</div>
-			<div class="brands__item">
-				<img class="max-w-none" src="assets/img/logo-microsoft.svg" alt="" />
-			</div>
-			<div class="brands__item">
-				<img class="max-w-none" src="assets/img/logo-walmart.svg" alt="" />
-			</div>
-			<div class="brands__item">
-				<img class="max-w-none" src="assets/img/logo-fedex.svg" alt="" />
-			</div>
-		</div>
-	</div>
-</div>
+<!--{% include brands.html %}-->
 <!--    Who are using section End-->
 <!--    What Is Kennekt Begin-->
 <div class="about py-8 xl:py-16 text-center px-6 xl:px-0">
@@ -90,11 +65,11 @@ layout: "layouts/base.njk"
 				Having a quick pulse on your clients will surely enhance your clients
 				experience and satisfaction.
 			</p>
-			<a
-				href="#"
-				class="text-lg text-primary font-bold transition hover:text-primary-lighter"
-				>Learn more &#8594;</a
-			>
+			<!--			<a-->
+			<!--				href="#"-->
+			<!--				class="text-lg text-primary font-bold transition hover:text-primary-lighter"-->
+			<!--				>Learn more &#8594;</a-->
+			<!--			>-->
 		</div>
 		<div class="about__video max-w-4xl mx-auto">
 			<iframe
@@ -139,151 +114,13 @@ layout: "layouts/base.njk"
 {% include features.html %}
 <!--    Tailor-made features End-->
 <!--   Work anywhere, with any device Begin-->
-<div class="device px-3 xl:px-0 xl:pt-40 xl:pb-44 pt-16 pb-20">
-	<div class="device__inner xl:max-w-[1100px] mx-auto">
-		<h2
-			class="device__title text-2xl xl:text-5xl font-semibold text-center mb-3 xl:mb-6"
-		>
-			Work anywhere, with any device
-		</h2>
-		<p
-			class="device__descr text-grey text-sm xl:text-lg xl:mb-20 mb-10 text-center"
-		>
-			These companies release their own versions of the operating systems with
-			minor changes, and yet always with the same bottom line.
-		</p>
-		<div class="device__apps xl:mb-28 mb-12">
-			<div class="device__list xl:flex-center-xy xl:gap-x-7">
-				<div class="device__item mb-4 xl:mb-0">
-					<a
-						href="#"
-						class="app-link block rounded border border-2 border-grey-light pl-6 pr-8 pt-2 pb-3 flex items-center group hover:border-primary transition hover:bg-primary"
-					>
-						<div
-							class="app-link__icon text-3xl mr-6 text-primary group-hover:text-white"
-						>
-							<svg
-								class="transition"
-								stroke="currentColor"
-								fill="currentColor"
-								stroke-width="0"
-								viewBox="0 0 24 24"
-								height="1em"
-								width="1em"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<path
-									fill-rule="evenodd"
-									d="M15.3007013,3.832 C16.1387013,2.818 16.7027013,1.405 16.5487013,0 C15.3407013,0.049 13.8797013,0.805 13.0137013,1.819 C12.2367013,2.717 11.5567013,4.154 11.7407013,5.531 C13.0867013,5.636 14.4627013,4.847 15.3007013,3.832 M18.3207013,12.75 C18.3547013,16.382 21.5067013,17.591 21.5417013,17.607 C21.5157013,17.692 21.0387013,19.329 19.8807013,21.02 C18.8807013,22.482 17.8427013,23.939 16.2067013,23.969 C14.5997013,23.998 14.0837013,23.016 12.2457013,23.016 C10.4097013,23.016 9.83570131,23.939 8.31370131,23.998 C6.73570131,24.058 5.53370131,22.417 4.52470131,20.961 C2.46370131,17.981 0.888701307,12.541 3.00370131,8.869 C4.05470131,7.045 5.93170131,5.89 7.96970131,5.861 C9.51970131,5.831 10.9827013,6.904 11.9307013,6.904 C12.8777013,6.904 14.6557013,5.614 16.5247013,5.803 C17.3077013,5.836 19.5037013,6.119 20.9147013,8.184 C20.8007013,8.254 18.2937013,9.714 18.3207013,12.75"
-								></path>
-							</svg>
-						</div>
-						<div class="app-link__content">
-							<div
-								class="text-grey-dark transition text-sm group-hover:text-white"
-							>
-								Download on the
-							</div>
-							<div
-								class="text-kdark transition font-bold text-xl group-hover:text-white"
-							>
-								App store
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="device__item mb-4 xl:mb-0">
-					<a
-						href="#"
-						class="app-link block rounded border border-2 border-grey-light pl-6 pr-8 pt-2 pb-3 flex items-center group hover:border-primary transition hover:bg-primary"
-					>
-						<div
-							class="app-link__icon text-3xl mr-6 text-primary group-hover:text-white"
-						>
-							<svg
-								stroke="currentColor"
-								fill="currentColor"
-								stroke-width="0"
-								viewBox="0 0 512 512"
-								height="1em"
-								width="1em"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<path
-									d="M325.3 234.3L104.6 13l280.8 161.2-60.1 60.1zM47 0C34 6.8 25.3 19.2 25.3 35.3v441.3c0 16.1 8.7 28.5 21.7 35.3l256.6-256L47 0zm425.2 225.6l-58.9-34.1-65.7 64.5 65.7 64.5 60.1-34.1c18-14.3 18-46.5-1.2-60.8zM104.6 499l280.8-161.2-60.1-60.1L104.6 499z"
-								></path>
-							</svg>
-						</div>
-						<div class="app-link__content">
-							<div
-								class="text-grey-dark transition text-sm group-hover:text-white"
-							>
-								Get it on
-							</div>
-							<div
-								class="text-kdark transition font-bold text-xl group-hover:text-white"
-							>
-								Google play
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="device__item mb-4 xl:mb-0">
-					<a
-						href="#"
-						class="app-link block rounded border border-2 border-grey-light pl-6 pr-8 pt-2 pb-3 flex items-center group hover:border-primary transition hover:bg-primary"
-					>
-						<div
-							class="app-link__icon text-3xl mr-6 text-primary group-hover:text-white"
-						>
-							<svg
-								width="34"
-								height="34"
-								fill="none"
-								xmlns="http://www.w3.org/2000/svg"
-							>
-								<path
-									d="M24.267 20.334c.133-1.1.233-2.2.233-3.334 0-1.133-.1-2.233-.233-3.333H29.9c.267 1.066.433 2.183.433 3.333 0 1.15-.166 2.267-.433 3.334h-5.633Zm-2.95 9.266c1-1.85 1.766-3.85 2.3-5.933h4.916a13.384 13.384 0 0 1-7.216 5.933Zm-.417-9.267h-7.8c-.167-1.1-.267-2.2-.267-3.333s.1-2.25.267-3.333h7.8c.15 1.083.267 2.2.267 3.333 0 1.134-.117 2.233-.267 3.334ZM17 30.267c-1.383-2-2.5-4.217-3.183-6.6h6.366c-.683 2.383-1.8 4.6-3.183 6.6Zm-6.667-19.933H5.467a13.205 13.205 0 0 1 7.2-5.934c-1 1.85-1.75 3.85-2.334 5.934ZM5.467 23.666h4.866c.584 2.083 1.334 4.083 2.334 5.933a13.347 13.347 0 0 1-7.2-5.933ZM4.1 20.333A13.736 13.736 0 0 1 3.667 17c0-1.15.166-2.267.433-3.333h5.633C9.6 14.767 9.5 15.867 9.5 17c0 1.134.1 2.233.233 3.334H4.1ZM17 3.718c1.383 2 2.5 4.233 3.183 6.617h-6.366C14.5 7.95 15.617 5.717 17 3.717Zm11.533 6.617h-4.916a26.085 26.085 0 0 0-2.3-5.934 13.311 13.311 0 0 1 7.216 5.934ZM17 .334C7.783.333.333 7.833.333 17A16.667 16.667 0 1 0 17 .333Z"
-									fill="currentColor"
-								/>
-							</svg>
-						</div>
-						<div class="app-link__content">
-							<div
-								class="text-grey-dark transition text-sm group-hover:text-white"
-							>
-								Browse
-							</div>
-							<div
-								class="text-kdark transition font-bold text-xl group-hover:text-white"
-							>
-								Web business
-							</div>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-		<div class="device__pic">
-			<picture>
-				<img
-					src="assets/pics/pic-devices-2x.png"
-					srcset="
-						assets/pics/pic-devices-2x.png 2x,
-						assets/pics/pic-devices.png    1x
-					"
-					alt="Kennekt cases page interface"
-				/>
-			</picture>
-		</div>
-	</div>
-</div>
+{% include work-anywhere.html %}
 <!--   Work anywhere, with any device End-->
 <!--  Upcoming features Begin-->
 <div class="upcoming pt-8 pb-16 xl:pt-16 xl:pb-28 px-3 xl:px-0">
 	<div class="upcoming__inner mx-auto">
 		<div class="upcoming__subtitle text-primary-lighter text-center mb-4">
-			There's more to Bigin than what meets the eye!
+			There's more to begin than what meets the eye!
 		</div>
 		<h2
 			class="upcoming__title section-title text-white mb-8 xl:mb-16 mx-auto text-center"
@@ -297,7 +134,13 @@ layout: "layouts/base.njk"
 					<div
 						class="upcoming-feat__icon w-12 h-12 rounded-full bg-primary-lighter flex items-center justify-center shrink-0 mr-5"
 					>
-						<img src="assets/img/{{upcomingFeature.icon}}.svg" alt="" />
+						<div class="w-7 h-7">
+							<img
+								class="w-full h-full object-cover"
+								src="assets/img/{{upcomingFeature.icon}}.svg"
+								alt=""
+							/>
+						</div>
 					</div>
 					<div class="upcoming-feat__content">
 						<h3
