feat: implement desktop version of contact us

--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,9 @@ layout: "layouts/base.njk"
 <!--   Work anywhere, with any device Begin-->
 {% include work-anywhere.html %}
 <!--   Work anywhere, with any device End-->
+<!--   Work anywhere, with any device Begin-->
+{% include contact-us.njk %}
+<!--   Work anywhere, with any device End-->
 <!--  Upcoming features Begin-->
 <div class="upcoming pt-8 pb-16 xl:pt-16 xl:pb-28 px-3 xl:px-0">
 	<div class="upcoming__inner mx-auto">
